dnl Process this file with autoconf to produce a configure script.
AC_INIT(openrender.lsm)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(openrender,1.0)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
AC_OUTPUT(Makefile openrender/Makefile openrender/shader/Makefile openrender/libribrender/Makefile)
dnl AC_OUTPUT(Makefile openrender/Makefile openrender/config/Makefile \
dnl           openrender/extdisplay/Makefile openrender/geometry/Makefile \
dnl           openrender/libribout/Makefile openrender/libribrender/Makefile \
dnl           openrender/libsloargs/Makefile openrender/netrender/Makefile \
dnl           openrender/render/Makefile openrender/shadeops/Makefile \
dnl           openrender/shader/Makefile openrender/shader-src/Makefile \
dnl           openrender/shadertell/Makefile openrender/test/Makefile)
