lib_LTLIBRARIES = libribrender.la
libribrender_la_LDFLAGS = -version-info 1:0:0
libribrender_la_SOURCES = attributes.cpp bound3D.cpp colour.cpp matrix4D.cpp point3D.cpp vector3D.cpp utils.cpp
EXTRA_DIST = vector3D.h vector3D.cpp point3D.h point3D.cpp matrix4D.h matrix4D.cpp colour.h colour.cpp utils.h utils.cpp attributes.h attributes.cpp bound3D.h bound3D.cpp
